<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diff_empty_bringup</name>
  <version>0.0.0</version>
  <description>Launch files for bringing up the DiffBot robot in an empty world with sensors</description>
  <maintainer email="arlikararyan@gmail.com">swarn</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>diffbot_description</exec_depend>
  <exec_depend>empty_world</exec_depend>
  <!-- for ros2 humble + gz harmonic build ros_gz* packages from source - guide in documentation for GZ Harmonic-->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
